--- a/.github/workflows/caas-coverage.yml
+++ b/.github/workflows/caas-coverage.yml
@@ -27,7 +27,13 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Show current path
+      run: pwd
+    - name: Regist CaaS env variable
+      run: export CAAS_CONFIG_PATH=./coverage/certificate-key.caas
+    - name: Install CaaS maven Plugin
+      run : mvn install:install-file -Dfile="jacov-maven-plugin.jar" -DgroupId=com.qualityscroll.caas -DartifactId=jacov-maven-plugin -Dpackaging="jar" -Dversion="1.0.0-SNAPSHOT"
+    - name: Run CaaS
+      run: mvn clean source:jar com.qualityscroll.caas:jacov-maven-plugin:1.0.0-SNAPSHOT:setup compile package
+    - name: Run coverage built target
+      run: java -jar -javaagent:coverage/java-runtime.jar target/helloworld-1.1.jar
