--- a/.github/workflows/caas-coverage.yml
+++ b/.github/workflows/caas-coverage.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Show current path
       run: pwd && ls -al
     - name: Regist CaaS env variable
-      run: export CAAS_CONFIG_PATH=./coverage/certificate-key.caas
+      run: export CAAS_CONFIG_PATH=$(pwd)/coverage/certificate-key.caas
     - name: Install CaaS maven Plugin
       run : mvn install:install-file -Dfile="./coverage/jacov-maven-plugin.jar" -DgroupId=com.qualityscroll.caas -DartifactId=jacov-maven-plugin -Dpackaging="jar" -Dversion="1.0.0-SNAPSHOT"
     - name: Run CaaS
