--- a/.github/workflows/caas-coverage.yml
+++ b/.github/workflows/caas-coverage.yml
@@ -30,10 +30,10 @@ jobs:
     - name: Show current path
       run: pwd && ls -al
     - name: Regist CaaS env variable
-      run: export CAAS_CONFIG_PATH=$(pwd)/coverage/certificate-key.caas
+      run: mv $(pwd)/coverage/certificate-key.caas /home/runner/.caas/certificate-key.caas
     - name: Install CaaS maven Plugin
       run : mvn install:install-file -Dfile="./coverage/jacov-maven-plugin.jar" -DgroupId=com.qualityscroll.caas -DartifactId=jacov-maven-plugin -Dpackaging="jar" -Dversion="1.0.0-SNAPSHOT"
-    - name: Run CaaS
+    - name: Run CaaS build
       run: mvn clean source:jar com.qualityscroll.caas:jacov-maven-plugin:1.0.0-SNAPSHOT:setup compile package
     - name: Run coverage built target
       run: java -jar -javaagent:coverage/java-runtime.jar target/helloworld-1.1.jar
