--- a/.github/workflows/caas-coverage.yml
+++ b/.github/workflows/caas-coverage.yml
@@ -10,7 +10,7 @@ name: Java CI with Maven
 
 on:
   pull_request:
-    branches: [ "feature/github-workflow-create" ]
+    branches: [ "main" ]
 
 jobs:
   build:
